# TexConv

./: .gitignore  .gitmodules  Bitmap.h  CMakeLists.txt  ComboTexture.cpp  ConvertImage.cpp  ConvertImage.h  CubemapConvert.cpp  DistanceFieldGenerater.cpp  HDR2PNG.cpp  ILImage.h  ILImageSupport.cpp  IMAGEMAGICK_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  Image2D.cpp  Image2D.h  ImageConvertConfig.h  ImageLoader.h  LANCZOS3_README.md  Lanczos3Scaler.cpp  Lanczos3Scaler.h  MagickImage.h  MagickImageSupport.cpp  MicroPBR.cpp  NormalTest.cpp  ParamParse.cpp  ParamParse.h  README.md  SpheremapNormal.cpp  TextureFileCreater.cpp  TextureFileCreater.h  TextureFileCreaterBasisU.cpp  TextureFileCreaterCompress.cpp  TextureFileCreaterCompressAMD.cpp  TextureFileCreaterCompressIntel.cpp  TextureFileCreaterR.cpp  TextureFileCreaterRG.cpp  TextureFileCreaterRGB.cpp  TextureFileCreaterRGBA.cpp  UseDefinitions.h  (+17 more)
Applications/_Libs/CMP_Math/: cmp_math_cpuid.cpp
Applications/_Plugins/Common/: Common_KernelDef.h  cmdline.cpp
CMP_CompressonatorLib/: CMakeLists.txt
CMP_CompressonatorLib/Common/: Texture.cpp
CMP_Core/shaders/: BCn_Common_kernel.h
DevIL Windows SDK/include/IL/: devil_internal_exports.h  il.h  il_wrap.h  ilu.h  ilu_region.h  ilut.h  ilut_config.h
IntelTextureCompression/: compile.bat  intel_texture_compression.h  intel_texture_compression_avx.h  intel_texture_compression_avx2.h  intel_texture_compression_sse2.h  intel_texture_compression_sse4.h  ispc_texcomp.cpp
